syntax = "proto3";

package event;

option go_package = "github.com/emorenkov/scorehub/pkg/event/proto;eventpb";

message ScoreEventRequest {
  int64 user_id = 1;
  int64 new_score = 2;
  int32 change = 3;
}

message EventAck {
  string status = 1;
}

service EventService {
  rpc SendScoreEvent(ScoreEventRequest) returns (EventAck);
}
