syntax = "proto3";

package user;

option go_package = "github.com/emorenkov/scorehub/pkg/user/proto;userpb";

message Empty {}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  int64 score = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message GetUserRequest {
  int64 id = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message UserResponse {
  User user = 1;
}

message ListUsersResponse {
  repeated User users = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (Empty);
  rpc ListUsers(Empty) returns (ListUsersResponse);
}
